# deformat

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.claude/commands/: arch-review.md  qa.md
benches/: strip.rs
examples/: strip.rs
scripts/: qa_random_urls.py
src/: detect.rs  error.rs  html.rs  lib.rs  pdf.rs
tests/: integration.rs  proptest.proptest-regressions  proptest.rs
